# mcp-course

./: .gitignore  README.md  chapter01.md  pyproject.toml
.vercel/: project.json
chapters/: chapter01.md
chapters/chapter02/: chapter02.md
chapters/chapter03/: readme.md  server.py
chapters/chapter03/calculator/: server.py
chapters/chapter04/: readme.md
chapters/chapter04/calculator/: client.py  server.py
chapters/chapter05/: readme.md
chapters/chapter05/calculator/: agent.py  main.py
chapters/chapter06/: readme.md
chapters/chapter06/calculator/: main.py  server.py
chapters/chapter07/: readme.md
chapters/chapter08/: readme.md
chapters/chapter08/asnor/: client.py  server.py
chapters/chapter09/asnor/: agent.py
